# aadc-2016

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  build_spaceracer.sh
include/: maneuverdata.h  map_data.h  mutexlocker.h  odometry_data.h  roadsigns.h
scripts/keyboard_reader/: keyboard_init.sh  myPythonReader.py
src/SR_AADC_DriverModule/: CMakeLists.txt  SR_DriverModule.cpp  SR_DriverModule.h
src/SR_CarFollower/: CMakeLists.txt  SR_CarFollower.cpp  SR_CarFollower.h
src/SR_Controller/: CMakeLists.txt  SR_AbstractParkingController.cpp  SR_AbstractParkingController.h  SR_Controller.cpp  SR_Controller.h  SR_CrossParkingController.cpp  SR_CrossParkingController.h  SR_ParallelParkingController.cpp  SR_ParallelParkingController.h  SR_PullOutCrossParkingController.cpp  SR_PullOutCrossParkingController.h  SR_PullOutLeftCrossParkingController.cpp  SR_PullOutLeftCrossParkingController.h  SR_PullOutParallelParkingController.cpp  SR_PullOutParallelParkingController.h
src/SR_ImageProcessing/: CMakeLists.txt  IPM.h  ProcessingThread.cpp  ProcessingThread.h  SR_ImageProcessing.cpp  SR_ImageProcessing.h
src/SR_InitialStateDetector/: CMakeLists.txt  InitialStateDetector.cpp  InitialStateDetector.h
src/SR_KeyboardRemote/: CMakeLists.txt  SR_KeyboardRemote.cpp  SR_KeyboardRemote.h
src/SR_ObstacleDetection/: CMakeLists.txt  SR_ObstacleDetection.cpp  SR_ObstacleDetection.h
src/SR_Odometry/: CMakeLists.txt  EulerAngles.cpp  EulerAngles.hpp  QuatTypes.h  SR_Calculations.cpp  SR_Calculations.h  SR_Odometry.cpp  SR_Odometry.h
src/SR_ParkingFinder/: CMakeLists.txt  SR_ParkingFinder.cpp  SR_ParkingFinder.h
src/SR_PathPlanner/: CMakeLists.txt  DrivingPath.cpp  DrivingPath.h  PathPlanner.cpp  PathPlanner.h
src/SR_PathViz/: CMakeLists.txt  PathViz.cpp  PathViz.h
src/SR_SignMapping/: CMakeLists.txt  SR_SignMapping.cpp  SR_SignMapping.h
src/SR_SignalClamper/: CMakeLists.txt  SR_SignalClamper.cpp  SR_SignalClamper.h
src/misc/: CrossingHelpers.cpp  CrossingHelpers.h  FastRot.h  LineHelpers.cpp  LineHelpers.h  OdometryHelpers.cpp  OdometryHelpers.h  PinWrapper.cpp  PinWrapper.h  SR_InputPin.cpp  SR_InputPin.h  SR_Logger.cpp  SR_Logger.h  SR_Maneuvers_List.h
src/tests/: .gitignore  CMakeLists.txt  DrivingPathTest.cpp  DrivingPathTest.h  tst_linehelperstest.cpp  tst_linehelperstest.h
